[package]
name = "cosworth"
version = "0.1.1"
authors = ["Gus Cost <guscost@gmail.com>"]
description = "A tool for making web services"
repository = "https://github.com/guscost/cosworth"
license = "MIT"

[dependencies]
actix = "0.7.4"
actix-web = { version = "0.7.7", features = ["alpn"] }
diesel = { version = "1.3.2", features = ["extras", "postgres"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bytes = "0.4.10"
chrono = "0.4.6"
futures = "0.1.24"
url = "1.7.1"
uuid = "0.6.5"
