[package]
name = "cosworth"
version = "0.1.2"
authors = ["Gus Cost <guscost@gmail.com>"]
description = "A tool for making web services"
repository = "https://github.com/guscost/cosworth"
license = "MIT"

[dependencies]
actix = "0.7.5"
actix-web = { version = "0.7.12", features = ["alpn"] }
bytes = "0.4.10"
chrono = "0.4.6"
diesel = { version = "1.3.3", features = ["extras", "postgres"] }
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.1"
uuid = "0.7.1"
