[package]
name = "cosworth_example"
version = "0.1.1"
authors = ["Gus Cost <guscost@gmail.com>"]

[dependencies]
cosworth = "0.1.1"
actix = "0.7.4"
actix-web = { version = "0.7.4", features = ["alpn"] }
diesel = { version = "1.3.2", features = ["extras", "postgres"] }
env_logger = "0.5.13"
futures = "0.1.24"
serde = "1.0.76"
serde_derive = "1.0.76"
serde_json = "1.0.26"
chrono = "0.4.6"
url = "1.7.1"
uuid = "0.6.5"
