[package]
name = "cosworth_example"
version = "0.1.1"
authors = ["Gus Cost <guscost@gmail.com>"]

[dependencies]
bytes = "0.4.10"
chrono = "0.4.6"
cosworth = { path = "..", version = "0.1.1" }
diesel = { version = "1.3.3", features = ["extras", "postgres"] }
env_logger = "0.5.13"
futures = "0.1.25"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.1"
uuid = "0.7.1"
