[package]
name = "cosworth_example"
version = "0.1.2"
authors = ["Gus Cost <guscost@gmail.com>"]

[dependencies]
bytes = "0.4.11"
chrono = "0.4.6"
cosworth = "0.1.2"
diesel = { version = "1.3.3", features = ["extras", "postgres"] }
env_logger = "0.6.0"
futures = "0.1.25"
num_cpus = "1.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.7.2"
uuid = "0.7.1"
